[package]
name = "ele"
version = "0.0.0"
authors = ["The Electric Computer Company <team@electric.computer>"]

[build-dependencies]
protoc-rust-grpc = "0.5.0"
protoc = "2.0.0"

[dependencies]
grpc = "0.5.0"
protobuf = "2.0.4"
tls-api = "0.1.20"
structopt = "0.2.10"
log = "0.4.3"
env_logger = "0.5.12"
failure = "0.1.2"
clap = "2.32.0"
tls-api-native-tls = "0.1.20"
uuid = { version = "0.6.5", features = ["serde", "v4"] }

