[package]
name = "ele"
version = "0.0.0"
authors = ["The Electric Computer Company <team@electric.computer>"]

[build-dependencies]
protoc-rust-grpc = "0.5.0"
protoc = "2.0.0"

[dev-dependencies]
assert_fs = "0.9.0"
predicates = "0.9.0"

[dependencies]
clap = "2.32.0"
env_logger = "0.5.12"
grpc = "0.5.0"
log = "0.4.3"
protobuf = "2.0.4"
structopt = "0.2.10"
tls-api = "0.1.20"
tls-api-native-tls = "0.1.20"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
sha2 = "0.7.1"
rand = "0.5.5"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]
